{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "ceb48719-b664-4442-b0c7-d2b4d24d58a9",
            "actions": [
                {
                    "name": "ACmovement",
                    "type": "PassThrough",
                    "id": "286b220f-5f12-48f1-8b9e-91bf7b641e43",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "moveCam",
                    "type": "PassThrough",
                    "id": "781357ee-8172-4e5f-a50f-a7e53e5aa84a",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ACyaw",
                    "type": "PassThrough",
                    "id": "f54342a2-601c-417c-9046-e5bc8d4aebc4",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ACthrottle",
                    "type": "Value",
                    "id": "636f1987-e23c-410a-bf20-f560c1dd3d94",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "toggleCam",
                    "type": "Button",
                    "id": "89bb7773-d740-4aa4-b431-6fbebe6884e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ACfireMSL",
                    "type": "Button",
                    "id": "8314f0b9-281f-4709-b34b-62342160d141",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ACfireGUN",
                    "type": "Button",
                    "id": "f49f20d4-9ccb-498e-a727-9218457d9f40",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ACcycleTgt",
                    "type": "Button",
                    "id": "1d0b1c9c-a45a-4500-885a-a62be71b3d16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca8993c0-8f24-4de5-827b-35d7adbabdbc",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACmovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23e8e495-2180-4bb6-aa19-bcfc71722035",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "moveCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "bf7f4f1b-a769-455a-a174-62a402be7032",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ACyaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2be54c3d-1a8d-4b6c-bcf3-6cc26d729b96",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACyaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1dd4ec88-97a8-4b6f-bf44-6c4350590ee6",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACyaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "778b41d3-19c1-4fcf-8e00-1dd1ed0d79bd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ACthrottle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "346aec30-0af4-4d44-ae71-0322ebae49ef",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACthrottle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f78bcf33-7076-426f-85df-eef1306a0ddb",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACthrottle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c10fbac4-b85f-46f1-91ca-75e2dbfa7619",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "toggleCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c471bfc8-affa-472b-94e3-f5f483f4f992",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACfireMSL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a25669f7-2a9d-4e80-9404-201131947dec",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACfireGUN",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d367b4e7-6ec1-4dc8-bfca-ddca67a1ec7f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "ACcycleTgt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "26e2c436-5613-4f0b-ac76-321d4e4108a1",
            "actions": [
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "f2721d48-f9a5-4e49-960b-f21b324b6ae3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "50d7781d-7ef3-4e95-80cc-dfdd74206019",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "385735c5-3cbd-48fa-8fce-269b0845dc4b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "c474b1ef-55c4-4b4f-b621-9cfe12b9e3ea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeLook",
                    "type": "PassThrough",
                    "id": "c0d80506-2788-4d6e-a33b-0967fca6684b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "1bb96548-3ee3-4e3c-b4fc-1292478b3f78",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "361b7e86-6e89-4b91-8c45-de28ba90a60a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "scrollWheel",
                    "type": "PassThrough",
                    "id": "ac0526d6-e3c4-4ad6-8ce5-88bb79c1d4de",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "dcfdc90f-d2d4-4303-a721-b7a29822c3d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "533a0bfa-ec87-43ef-b9bb-fb2ad5d18c7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6dc4de6d-4131-407d-8c6f-f80b7668e992",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53be3420-c9ee-48c2-958d-2b90abaeb3c6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b41f4f11-6d46-4bac-908e-bdc8b3800d76",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f624e7b2-f7f9-463d-8985-6fbc7d4affa4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "59918350-fe57-4707-9146-37bbd9d20669",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0e098c94-1bd1-4820-bd5d-5193d25c66cb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7aa98601-749d-4e45-ad12-b15204b36dde",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "54c5b609-26a4-46fd-8240-0d2d13cee029",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25901049-1923-4ed0-afe4-1d986264fa90",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9286ea06-1e4d-479e-a2ba-2910bd3415d3",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe0bdf96-1f4e-40c0-8202-3c4e15264914",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "FreeLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07f1603e-f6b6-4b64-81fb-76fb21d492db",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d8c774a-66ca-4078-b651-2b9934d9e75f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ca90bbc-0bdc-4755-b987-57bda220472f",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "scrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "47ff7ac3-6184-4d9b-bd0b-3b02c7624d9c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "scrollWheel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5dc05385-a3d3-4675-b678-1af760d4a736",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "scrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2204ae51-6d6d-477d-96db-cce3796f1c46",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";DualStickController",
                    "action": "scrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e9e59747-b09e-4458-a248-a902618a5d65",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "scrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e8cf4566-8a98-4d4d-bf09-0e6a35ac09a3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "scrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7a7c72ba-51ef-4479-8eb3-43df2a8a8d46",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "647bc85f-0d95-4560-b2f6-d33acf19e31b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KB&M",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "DualStickController",
            "bindingGroup": "DualStickController",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KB&M",
            "bindingGroup": "KB&M",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}